objects/Lab__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Floor__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blood test</fullName>
                </value>
                <value>
                    <fullName>CT scan</fullName>
                </value>
                <value>
                    <fullName>Xray</fullName>
                </value>
                <value>
                    <fullName>Ultra sound</fullName>
                </value>
                <value>
                    <fullName>ECG Scan</fullName>
                </value>
                <value>
                    <fullName>MRI SCan</fullName>
                </value>
                <value>
                    <fullName>urine test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Doctor_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Doctor id</label>
        <referenceTo>Doctor__c</referenceTo>
        <relationshipLabel>patient</relationshipLabel>
        <relationshipName>Labs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <description>Describing the floors in the hospital</description>
        <label>Floor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lab_Name__c</fullName>
        <label>Lab Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ganga labs</fullName>
                </value>
                <value>
                    <fullName>saraswathi labs</fullName>
                </value>
                <value>
                    <fullName>jamuna labs</fullName>
                </value>
                <value>
                    <fullName>Godavari labs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_numebr__c</fullName>
        <label>Test number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>approval_status__c</fullName>
        <label>approval status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>processing</fullName>
                </value>
                <value>
                    <fullName>approved</fullName>
                </value>
                <value>
                    <fullName>rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>patient_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>patient_id</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipLabel>Labs</relationshipLabel>
        <relationshipName>Labs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>weight__c</fullName>
        <label>weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Lab</label>
    <nameField>
        <label>Lab number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Labs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>date_cannot_be_in_the_past</fullName>
        <active>true</active>
        <description>daate cannot be in the past</description>
        <errorConditionFormula>Date__c  &lt;  TODAY()</errorConditionFormula>
        <errorMessage>date should not be in the past</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>date_validation_rules</fullName>
        <active>true</active>
        <errorConditionFormula>YEAR( Date__c )  &lt;&gt;  YEAR( TODAY() )</errorConditionFormula>
        <errorMessage>date should be in the current year</errorMessage>
    </validationRules>
</CustomObject>